fix login jump

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -14,5 +14,4 @@
 
 .link-text:hover {
     cursor: pointer;
-    margin: auto;
 }
